<resources>
    <string name="app_name">OutGo Alert</string>

    <string name="title_intro_slide_1">Alert Weather Conditions</string>
    <string name="desc_intro_slide_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</string>
    <string name="title_intro_slide_2">Intro Screen Slide 2</string>
    <string name="desc_intro_slide_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</string>
    <string name="title_intro_slide_3">Intro Screen Slide 3</string>
    <string name="desc_intro_slide_3">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</string>
    <string name="button_intro_skip">Skip</string>
    <string name="dot_symbol">•</string>

    <!-- Tab names-->
    <string name="title_home">Home</string>
    <string name="title_events">Events</string>
    <string name="title_alerts">Alerts</string>
    <string name="title_settings">Settings</string>

    <!-- Text on Home tab-->
    <string name="title_home_my_location">My Location</string>
    <string name="title_home_upcoming_reminder">Upcoming Reminder</string>
    <string name="title_home_active_alerts">Active Alerts</string>

    <!-- Text on Events tab-->
    <string name="title_repeated_events">Repeated Events</string>
    <string name="title_onetime_events">One-Time Events</string>
    <string name="button_add">+ Add</string>
    <string name="title_events_on_date">Events on 01/01/2001</string>
    <string name="title_import_file">Import File</string>
    <string name="button_import_ics">Import calender from .ics</string>
    <string name="title_export_calendar">Export Calendar</string>
    <string name="button_export_ics">Export to .ics</string>
    <string name="title_connect_online_calendars">Connect Online Calendars</string>
    <string name="button_connect_google">Connect with Google Account</string>
    <string name="button_connect_microsoft">Connect with Microsoft Account</string>

    <!-- Text on Alerts tab-->
    <string name="title_saved_alerts">Saved Alerts</string>
    <string name="desc_saved_alerts">The following are the weather conditions to notify and their respective reminders for items to bring. Click on the + button to add a new alert type. To edit the details of an existing alert type, click on the item and enter the details on the next page.</string>
    <string name="title_edit_alert">Edit Alert Type Details</string>
    <string name="desc_edit_alert">Edit the information below to change the alert settings for the weather type.</string>
    <string name="table_title_weather_icon">Weather Icon</string>
    <string name="table_title_weather_name">Name</string>
    <string name="table_title_weather_items">Items</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_save_settings">Save Settings</string>
    <string name="desc_button_icon_image">Image icon for weather type</string>

    <!-- Text on Settings tab-->
    <string name="title_backup_data">Backup Data</string>
    <string name="button_import_data">Import Backup Data</string>
    <string name="button_export_data">Export Backup Data</string>
    <string name="title_reset">Reset</string>
    <string name="button_reset_data">Reset App Data</string>

    <!-- Text on RecyclerView items -->
    <string name="desc_weather_icon">Weather Icon</string>
    <string name="text_weather">Weather</string>
    <string name="text_instructions">Instructions</string>
    <string name="slider_item_desc_image">Slider Image</string>
</resources>