<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24sp"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/title_backup_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title_backup_data"
        app:layout_constraintTop_toTopOf="parent"/>
    <Button
        android:id="@+id/button_import_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12sp"
        android:text="@string/button_import_data"
        app:layout_constraintTop_toBottomOf="@+id/title_backup_data"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/button_export_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12sp"
        android:text="@string/button_export_data"
        app:layout_constraintTop_toBottomOf="@+id/button_import_data"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/title_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/title_reset"
        app:layout_constraintTop_toBottomOf="@+id/button_export_data"/>
    <Button
        android:id="@+id/button_reset_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12sp"
        android:text="@string/button_reset_data"
        app:layout_constraintTop_toBottomOf="@+id/title_reset"
        app:layout_constraintLeft_toLeftOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>