<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.events.pages.TabPageEventList">

    <LinearLayout
        android:id="@+id/repeated_events_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24sp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/repeated_events_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="24sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_height="32sp"
                android:text="@string/title_repeated_events"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_add_repeated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/repeated_events_section">
        <LinearLayout
            android:id="@+id/onetime_events_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="24sp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_height="32sp"
                android:text="@string/title_onetime_events"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_add_onetime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>