<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:labelFor="@+id/edit_text_home_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="24sp"
                    android:layout_marginTop="12sp"
                    android:gravity="center"
                    android:text="@string/title_home_my_location"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="12dp"
                    android:paddingHorizontal="20sp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <EditText
                        android:id="@+id/edit_text_home_location"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginHorizontal="10sp"
                        android:gravity="center"
                        android:ems="10"
                        android:inputType="textPostalAddress"
                        android:textSize="24sp"/>

                    <Button
                        android:id="@+id/button"
                        android:layout_width="52sp"
                        android:layout_height="64sp"
                        android:padding="0sp"
                        android:text="🔍" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:paddingVertical="12dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:layout_marginTop="12sp"
                    android:layout_marginBottom="24sp"
                    android:gravity="center"
                    android:text="@string/title_home_upcoming_reminder"
                    android:textSize="24sp"
                    android:textStyle="bold"/>
                <include android:id="@+id/upcoming_reminders" layout="@layout/event_card"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="12dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:textSize="24sp"
                    android:layout_marginBottom="12sp"
                    android:gravity="center"
                    android:text="@string/title_home_active_alerts"
                    android:textStyle="bold"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_active_alerts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6sp"
                    android:paddingHorizontal="10sp"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>